kubernetes/services/homer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8080
  selector:
    app: homer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  namespace: default
spec:
  tls:
    - hosts:
        - dash.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: dash.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: default
  labels:
    app: homer
  annotations:
    reloader.stakater.com/auto: "true"
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@daily"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer:latest
          resources:
            requests:
              memory: 32Mi
              cpu: 125m
            limits:
              memory: 64Mi
              cpu: 250m
          ports:
            - name: web
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /www/assets/config.yml
              subPath: config.yml
      volumes:
        - name: config
          configMap:
            name: homer
